# mediaindexer

./: .gitignore  README-updater.txt  README.md  backend.py  media-indexer-api.spec  package-lock.json  package.json  requirements.txt
$HOME/.tauri/: media-indexer.key  media-indexer.key.pub
.github/workflows/: release.yml
backend/: api.py
scripts/: build_sidecar.bat  build_sidecar.ps1
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.txt
src-tauri/src/: main.rs
