[package]
name = "media-indexer"
version = "1.0.0"
description = "Media Indexer"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-execute", "shell-sidecar", "dialog-all", "http-all", "process-command-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
