[package]
name = "media-indexer"
version = "1.0.1"
description = "Media Indexer"
authors = ["Jeanpierre Tran"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [
  "shell-execute",
  "shell-sidecar",
  "dialog-all",
  "http-all",
  "process-command-api",
  "process-relaunch",
  "updater"
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
